target/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'false'", 
                     "'integer'", "'while'", "'of'", "'break'", "'float'", 
                     "'return'", "'void'", "'inherit'", "'boolean'", "'for'", 
                     "'string'", "'function'", "'do'", "'true'", "'out'", 
                     "'else'", "'if'", "'continue'", "'array'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", "';'", 
                     "':'", "'='", "'_'" ]

    symbolicNames = [ "<INVALID>", "BlockComment", "LineComment", "IntegerConstant", 
                      "FloatingConstant", "StringConstant", "BooleanConstant", 
                      "Auto", "False_", "Integer", "While", "Of", "Break", 
                      "Float", "Return", "Void", "Inherit", "Boolean_", 
                      "For", "String", "Function", "Do", "True_", "Out", 
                      "Else", "If", "Continue", "Array", "Plus", "Minus", 
                      "Star", "Div", "Mod", "Not", "AndAnd", "OrOr", "Equal", 
                      "NotEqual", "Less", "LessEqual", "Greater", "GreaterEqual", 
                      "ColonColon", "LeftParen", "RightParen", "LeftBracket", 
                      "RightBracket", "LeftBrace", "RightBrace", "Dot", 
                      "Comma", "Semi", "Colon", "Assign", "Under", "Identifier", 
                      "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_variableDeclaration = 2
    RULE_shortDeclaration = 3
    RULE_longDeclaration = 4
    RULE_initializer = 5
    RULE_identifiers = 6
    RULE_typeName = 7
    RULE_atomicType = 8
    RULE_arrayType = 9
    RULE_parameter = 10
    RULE_functionDeclaration = 11
    RULE_functionPrototype = 12
    RULE_parameters = 13
    RULE_blockStatement = 14
    RULE_blockItem = 15
    RULE_statement = 16
    RULE_assignmentStatement = 17
    RULE_ifStatement = 18
    RULE_forStatement = 19
    RULE_whileStatement = 20
    RULE_do_whileStatement = 21
    RULE_breakStatement = 22
    RULE_continueStatement = 23
    RULE_returnStatement = 24
    RULE_callStatement = 25
    RULE_expressions = 26
    RULE_expression = 27
    RULE_stringExpression = 28
    RULE_relationalExpression = 29
    RULE_logicalExpression = 30
    RULE_additiveExpression = 31
    RULE_multiplicativeExpression = 32
    RULE_unaryExpression = 33
    RULE_signExpression = 34
    RULE_postfixExpression = 35
    RULE_primaryExpression = 36
    RULE_functionCall = 37
    RULE_literal = 38

    ruleNames =  [ "program", "declaration", "variableDeclaration", "shortDeclaration", 
                   "longDeclaration", "initializer", "identifiers", "typeName", 
                   "atomicType", "arrayType", "parameter", "functionDeclaration", 
                   "functionPrototype", "parameters", "blockStatement", 
                   "blockItem", "statement", "assignmentStatement", "ifStatement", 
                   "forStatement", "whileStatement", "do_whileStatement", 
                   "breakStatement", "continueStatement", "returnStatement", 
                   "callStatement", "expressions", "expression", "stringExpression", 
                   "relationalExpression", "logicalExpression", "additiveExpression", 
                   "multiplicativeExpression", "unaryExpression", "signExpression", 
                   "postfixExpression", "primaryExpression", "functionCall", 
                   "literal" ]

    EOF = Token.EOF
    BlockComment=1
    LineComment=2
    IntegerConstant=3
    FloatingConstant=4
    StringConstant=5
    BooleanConstant=6
    Auto=7
    False_=8
    Integer=9
    While=10
    Of=11
    Break=12
    Float=13
    Return=14
    Void=15
    Inherit=16
    Boolean_=17
    For=18
    String=19
    Function=20
    Do=21
    True_=22
    Out=23
    Else=24
    If=25
    Continue=26
    Array=27
    Plus=28
    Minus=29
    Star=30
    Div=31
    Mod=32
    Not=33
    AndAnd=34
    OrOr=35
    Equal=36
    NotEqual=37
    Less=38
    LessEqual=39
    Greater=40
    GreaterEqual=41
    ColonColon=42
    LeftParen=43
    RightParen=44
    LeftBracket=45
    RightBracket=46
    LeftBrace=47
    RightBrace=48
    Dot=49
    Comma=50
    Semi=51
    Colon=52
    Assign=53
    Under=54
    Identifier=55
    WS=56
    ERROR_CHAR=57
    UNCLOSE_STRING=58
    ILLEGAL_ESCAPE=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def declaration(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.Identifier:
                self.state = 78
                self.declaration()


            self.state = 81
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(MT22Parser.VariableDeclarationContext,i)


        def functionDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.FunctionDeclarationContext)
            else:
                return self.getTypedRuleContext(MT22Parser.FunctionDeclarationContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MT22Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 85
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 83
                    self.variableDeclaration()
                    pass

                elif la_ == 2:
                    self.state = 84
                    self.functionDeclaration()
                    pass


                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.Identifier):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Semi(self):
            return self.getToken(MT22Parser.Semi, 0)

        def shortDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.ShortDeclarationContext,0)


        def longDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.LongDeclarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variableDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = MT22Parser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 89
                self.shortDeclaration()
                pass

            elif la_ == 2:
                self.state = 90
                self.longDeclaration()
                pass


            self.state = 93
            self.match(MT22Parser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShortDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifiers(self):
            return self.getTypedRuleContext(MT22Parser.IdentifiersContext,0)


        def Colon(self):
            return self.getToken(MT22Parser.Colon, 0)

        def typeName(self):
            return self.getTypedRuleContext(MT22Parser.TypeNameContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_shortDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShortDeclaration" ):
                return visitor.visitShortDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def shortDeclaration(self):

        localctx = MT22Parser.ShortDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_shortDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.identifiers()
            self.state = 96
            self.match(MT22Parser.Colon)
            self.state = 97
            self.typeName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LongDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MT22Parser.Identifier, 0)

        def Colon(self):
            return self.getToken(MT22Parser.Colon, 0)

        def typeName(self):
            return self.getTypedRuleContext(MT22Parser.TypeNameContext,0)


        def Assign(self):
            return self.getToken(MT22Parser.Assign, 0)

        def initializer(self):
            return self.getTypedRuleContext(MT22Parser.InitializerContext,0)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.Comma)
            else:
                return self.getToken(MT22Parser.Comma, i)

        def longDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.LongDeclarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_longDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLongDeclaration" ):
                return visitor.visitLongDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def longDeclaration(self):

        localctx = MT22Parser.LongDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_longDeclaration)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(MT22Parser.Identifier)
                self.state = 100
                self.match(MT22Parser.Colon)
                self.state = 101
                self.typeName()
                self.state = 102
                self.match(MT22Parser.Assign)
                self.state = 103
                self.initializer()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(MT22Parser.Identifier)
                self.state = 106
                self.match(MT22Parser.Comma)
                self.state = 107
                self.longDeclaration()
                self.state = 108
                self.match(MT22Parser.Comma)
                self.state = 109
                self.initializer()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitializerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressions(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionsContext,0)


        def LeftBrace(self):
            return self.getToken(MT22Parser.LeftBrace, 0)

        def initializer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.InitializerContext)
            else:
                return self.getTypedRuleContext(MT22Parser.InitializerContext,i)


        def RightBrace(self):
            return self.getToken(MT22Parser.RightBrace, 0)

        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.Comma)
            else:
                return self.getToken(MT22Parser.Comma, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_initializer

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitializer" ):
                return visitor.visitInitializer(self)
            else:
                return visitor.visitChildren(self)




    def initializer(self):

        localctx = MT22Parser.InitializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_initializer)
        self._la = 0 # Token type
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.IntegerConstant, MT22Parser.FloatingConstant, MT22Parser.StringConstant, MT22Parser.BooleanConstant, MT22Parser.Minus, MT22Parser.Not, MT22Parser.LeftParen, MT22Parser.Identifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.expressions()
                pass
            elif token in [MT22Parser.LeftBrace]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(MT22Parser.LeftBrace)
                self.state = 115
                self.initializer()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MT22Parser.Comma:
                    self.state = 116
                    self.match(MT22Parser.Comma)
                    self.state = 117
                    self.initializer()
                    self.state = 122
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 123
                self.match(MT22Parser.RightBrace)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifiersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.Identifier)
            else:
                return self.getToken(MT22Parser.Identifier, i)

        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.Comma)
            else:
                return self.getToken(MT22Parser.Comma, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_identifiers

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifiers" ):
                return visitor.visitIdentifiers(self)
            else:
                return visitor.visitChildren(self)




    def identifiers(self):

        localctx = MT22Parser.IdentifiersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_identifiers)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(MT22Parser.Identifier)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MT22Parser.Comma:
                self.state = 128
                self.match(MT22Parser.Comma)
                self.state = 129
                self.match(MT22Parser.Identifier)
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomicType(self):
            return self.getTypedRuleContext(MT22Parser.AtomicTypeContext,0)


        def Void(self):
            return self.getToken(MT22Parser.Void, 0)

        def Auto(self):
            return self.getToken(MT22Parser.Auto, 0)

        def arrayType(self):
            return self.getTypedRuleContext(MT22Parser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_typeName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeName" ):
                return visitor.visitTypeName(self)
            else:
                return visitor.visitChildren(self)




    def typeName(self):

        localctx = MT22Parser.TypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typeName)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.Integer, MT22Parser.Float, MT22Parser.Boolean_, MT22Parser.String]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.atomicType()
                pass
            elif token in [MT22Parser.Void]:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(MT22Parser.Void)
                pass
            elif token in [MT22Parser.Auto]:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.match(MT22Parser.Auto)
                pass
            elif token in [MT22Parser.Array]:
                self.enterOuterAlt(localctx, 4)
                self.state = 138
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomicTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Boolean_(self):
            return self.getToken(MT22Parser.Boolean_, 0)

        def Integer(self):
            return self.getToken(MT22Parser.Integer, 0)

        def Float(self):
            return self.getToken(MT22Parser.Float, 0)

        def String(self):
            return self.getToken(MT22Parser.String, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomicType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomicType" ):
                return visitor.visitAtomicType(self)
            else:
                return visitor.visitChildren(self)




    def atomicType(self):

        localctx = MT22Parser.AtomicTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_atomicType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.Integer) | (1 << MT22Parser.Float) | (1 << MT22Parser.Boolean_) | (1 << MT22Parser.String))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Array(self):
            return self.getToken(MT22Parser.Array, 0)

        def LeftBracket(self):
            return self.getToken(MT22Parser.LeftBracket, 0)

        def RightBracket(self):
            return self.getToken(MT22Parser.RightBracket, 0)

        def Of(self):
            return self.getToken(MT22Parser.Of, 0)

        def atomicType(self):
            return self.getTypedRuleContext(MT22Parser.AtomicTypeContext,0)


        def IntegerConstant(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.IntegerConstant)
            else:
                return self.getToken(MT22Parser.IntegerConstant, i)

        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.Comma)
            else:
                return self.getToken(MT22Parser.Comma, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_arrayType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayType" ):
                return visitor.visitArrayType(self)
            else:
                return visitor.visitChildren(self)




    def arrayType(self):

        localctx = MT22Parser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arrayType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(MT22Parser.Array)
            self.state = 144
            self.match(MT22Parser.LeftBracket)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.IntegerConstant:
                self.state = 145
                self.match(MT22Parser.IntegerConstant)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MT22Parser.Comma:
                    self.state = 146
                    self.match(MT22Parser.Comma)
                    self.state = 147
                    self.match(MT22Parser.IntegerConstant)
                    self.state = 152
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 155
            self.match(MT22Parser.RightBracket)
            self.state = 156
            self.match(MT22Parser.Of)
            self.state = 157
            self.atomicType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MT22Parser.Identifier, 0)

        def Colon(self):
            return self.getToken(MT22Parser.Colon, 0)

        def typeName(self):
            return self.getTypedRuleContext(MT22Parser.TypeNameContext,0)


        def Inherit(self):
            return self.getToken(MT22Parser.Inherit, 0)

        def Out(self):
            return self.getToken(MT22Parser.Out, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = MT22Parser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.Inherit:
                self.state = 159
                self.match(MT22Parser.Inherit)


            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.Out:
                self.state = 162
                self.match(MT22Parser.Out)


            self.state = 165
            self.match(MT22Parser.Identifier)
            self.state = 166
            self.match(MT22Parser.Colon)
            self.state = 167
            self.typeName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionPrototype(self):
            return self.getTypedRuleContext(MT22Parser.FunctionPrototypeContext,0)


        def blockStatement(self):
            return self.getTypedRuleContext(MT22Parser.BlockStatementContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_functionDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclaration" ):
                return visitor.visitFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclaration(self):

        localctx = MT22Parser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functionDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.functionPrototype()
            self.state = 170
            self.blockStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionPrototypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
